DVK-1028: Fix to map clipping issue.

--- a/admin/src/theme/dvk.css
+++ b/admin/src/theme/dvk.css
@@ -929,6 +929,7 @@ ion-grid.alert ion-icon.error {
 }
 .mapExportTool ion-col:first-of-type {
   max-height: calc(100vh - 75px - 100px);
+  box-sizing: content-box;
 }
 
 .mapExportTool ion-grid.print-images {
